# vocapp

./: .gitignore  Dockerfile  README.md  add_languages.py  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  super_simple.html  vocapp.html
api/: model.py  route.py
database/: model.py  session.py
migrations/: env.py
migrations/versions/: 430f4c1ba699_add_indexes_and_column_renames.py  460f33aeebef_removed_already_existing_indexes_from_.py  6cb84975696c_add_active_state_review.py  6d86aab3278f_first_setup_postgres.py  822d253bf426_first_setup_postgres.py  a267bc02d155_add_review_note_column_alternative_.py  beb70d94702c_switch_is_reverse_to_type.py  e29f6c50ed12_switch_to_pascalcase.py  e3e2b197b9fe_mainly_updates_for_utc.py  e78dbf538c80_fixed_ambiguous_alternative_word_for_.py
service/: fsrs_service.py
static_webpage/: http_methods.js  index.html  vocapp.html
templates/: selector.html  table.html
