[project]
name = "vocapp"
version = "0.1.0"
description = "Personal app for learning languages"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "fastapi>=0.136.0",
    "fsrs>=6.3.1",
    "jinja2>=3.1.6",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "pytz>=2026.1.post1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "watchfiles>=1.1.1",
]
